# cookiecutter-django-shop

./: docker-compose.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
{{cookiecutter.project_slug}}/docker-files/: webapp.dockerfile
